--- a/website/pyvenv.cfg
+++ b/website/pyvenv.cfg
@@ -1,3 +1,5 @@
-home = C:\Users\Teste\AppData\Local\Microsoft\WindowsApps\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0
+home = C:\Program Files\Python311
 include-system-site-packages = false
-version = 3.10.11
+version = 3.11.4
+executable = C:\Program Files\Python311\python.exe
+command = C:\Program Files\Python311\python.exe -m venv C:\Users\Gabriel\.vscode\GitHub\LuxuryWheels\website
