--- a/app.yaml
+++ b/app.yaml
@@ -1,8 +1,5 @@
-runtime: python39 # Especifica a versão do runtime do Python
-entrypoint: gunicorn -b :$PORT app:app # Comando personalizado para iniciar sua aplicação
-instance_class: F1 # Classe da instância que define a alocação de recursos
+runtime: custom
+env: flex
 
-handlers:
-  - url: /.* # Padrão de URL que indica quais URLs devem ser tratadas por esta aplicação
-    script: auto # Direciona as requisições para o aplicativo Python
-
+manual_scaling:
+  instances: 1
